--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul id="fileList"></ul>
 
     <script type="module">
-        import { BlobServiceClient } from "https://CDNstatickprofile.azureedge.net";
+        import { BlobServiceClient } from "https://cdn.jsdelivr.net/npm/@azure/storage-blob@12.12.0/+esm";
 
         // Az Azure Blob Storage kapcsolati információi
         const storageAccountName = "myfilestorage123";
