--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
         // Weboldal betöltésekor listázza a fájlokat
         listFiles();
     </script>
+
+    <p>CI/CD teszt</p>
 </body>
 </html>
